cargo-desugar/tests/ui/extern-safety.out
error: items in `extern` blocks without an `unsafe` qualifier cannot have safety qualifiers
  --> tests/ui/extern-safety.desugared.rs:19:5
   |
19 |     unsafe fn ffi();
   |     ^^^^^^^^^^^^^^^^
   |
help: add `unsafe` to this `extern` block
   |
18 | unsafe extern "C" {
   | ++++++

error: aborting due to 1 previous error

